fix dark mode

--- a/src/Assets/_global.scss
+++ b/src/Assets/_global.scss
@@ -5,7 +5,12 @@
 }
 
 body.darkmode {
-    div {
-        background-color: #3D3D3D;;
+    * ,.profile-section ,.story-section {
+        background: #3d3d3d;
+        color: var(--whiteColor);
     }
-}
+    input{
+        border: 1px solid;
+    }
+  }
+  
