--- a/src/Assets/_mixins.scss
+++ b/src/Assets/_mixins.scss
@@ -18,7 +18,6 @@
   font-family: $ArticalFont;
   line-height: 127%;
   text-align: center;
-  color: var(--blackColor);
 }
 @mixin headingStyles {
   font-family: $TitleFont;
@@ -35,6 +34,5 @@
   font-weight: 500;
   font-size: 24px;
   line-height: 127%;
-  color: var(--blackColor);
 }
 
